# ChangeLog for dev-ruby/zentest
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.57 2009/09/05 18:58:03 ranger Exp $

  05 Sep 2009; Brent Baude <ranger@gentoo.org> zentest-4.1.3.ebuild:
  Marking zentest-4.1.3 ppc64 for bug 280665

  29 Aug 2009; nixnut <nixnut@gentoo.org> zentest-4.1.3.ebuild:
  ppc stable #280665

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> zentest-4.1.3.ebuild:
  ia64 stable wrt #280665

  14 Aug 2009; Markus Meier <maekke@gentoo.org> zentest-4.1.3.ebuild:
  amd64/x86 stable, bug #280665

*zentest-4.1.4 (08 Aug 2009)

  08 Aug 2009; Hans de Graaff <graaff@gentoo.org> +zentest-4.1.4.ebuild:
  Version bump with minor enhancements and bug fixes.

  07 Aug 2009; Hans de Graaff <graaff@gentoo.org> -zentest-4.0.0.ebuild,
  -zentest-4.1.1.ebuild:
  Remove old versions that we skip in stabilization.

*zentest-4.1.3 (30 Jun 2009)

  30 Jun 2009; Hans de Graaff <graaff@gentoo.org> +zentest-4.1.3.ebuild:
  Version bump with mostly bug fixes.

*zentest-4.1.1 (09 Jun 2009)

  09 Jun 2009; Hans de Graaff <graaff@gentoo.org> +zentest-4.1.1.ebuild:
  Version bump with several enhancements and bug fixes. Note that Rails
  support
  for autotest had been unbundled and is now available in
  dev-ruby/autotest-rails.

  05 Jun 2009; Hans de Graaff <graaff@gentoo.org> -zentest-3.9.1.ebuild,
  -zentest-3.11.1.ebuild:
  Remove old versions.

*zentest-4.0.0 (06 Mar 2009)

  06 Mar 2009; Hans de Graaff <graaff@gentoo.org> +zentest-4.0.0.ebuild:
  Version bump

*zentest-3.11.1 (24 Jan 2009)

  24 Jan 2009; Hans de Graaff <graaff@gentoo.org> +zentest-3.11.1.ebuild:
  Minor version bump: fixed growl plugin.

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> zentest-3.11.0.ebuild:
  ia64 stable wrt #250348

  20 Dec 2008; Markus Meier <maekke@gentoo.org> zentest-3.11.0.ebuild:
  amd64/x86 stable, bug #250348

  14 Dec 2008; nixnut <nixnut@gentoo.org> zentest-3.11.0.ebuild: