@@ -1,8 +1,10 @@
 DIST ZenTest-3.11.0.gem 84480 RMD160 1f232061ebd25b7631b0eaabd4d86af69bfc12fe SHA1 a3a61957d354f171f169a8ac6bd6c07ecda83749 SHA256 e703711069ce6d2bf2fa2767f6e8b64c0b7d83c3abc824c74717359ec51dc8e1
 DIST ZenTest-4.1.3.gem 62976 RMD160 4c1b3dcfaa0c3af02742afc2ae355bb460496a5d SHA1 7377d3a60f276ae31d6e2294e5974ea2fed46e72 SHA256 17027e7878e7849de1c74089c4d1c5943d8068815dafc2c946a5068b8b634803
 DIST ZenTest-4.1.4.gem 60416 RMD160 eab798623bd819e5ed85a5693f87e24e7c3dab29 SHA1 e649df4cb482a5eb3ef6b109a57f3c27f4555912 SHA256 9884fce46568b46ee2d1ac61248558c025d5f36b16286c1fa4a1edfc3117232a
+DIST ZenTest-4.2.1.gem 64000 RMD160 200be7834112cc755ade1b84cc289cf42a4ae9f4 SHA1 2fce543902832039a1e27acfc41e86a584aeab78 SHA256 a04fe382b476bff7f14750be83f9f8c8b3ab0a382e863ce04bcae9ba6b849b2d
 EBUILD zentest-3.11.0.ebuild 626 RMD160 42f54fdcc896f931bb350c89a600447ce67fab8e SHA1 1a7983835cf196b84c14c9ce37bc96f61de6e9b0 SHA256 464ba9107813a6cbc9f457560689893ee6e1becc5e87a58a17713af01e1f8e87
 EBUILD zentest-4.1.3.ebuild 837 RMD160 e637b2cd3802f3c212bb699a56c391104f5bdf74 SHA1 d878c7df7ae3f4336e9012815ad40ebf1095357d SHA256 e1393a4e690c6fa82c0aa867559db5f9e8d1d1f9cefe45c26f4aa454e3992dc0
 EBUILD zentest-4.1.4.ebuild 801 RMD160 b65d492122c1ab87cb6056d5be398f4f72011d74 SHA1 5c0cab4e40a70e3382eaca6baf0708a470c06cce SHA256 c905f4bce1151888833437209fbdc115eb74fa6ae73e78b9eb1b2153c177d4da
-MISC ChangeLog 7948 RMD160 e7659c45474678740e6d4c03d35d5330e611ce9c SHA1 0a4283580aedccd49e4b3ae98f86270f771eee7c SHA256 95502a2ec2b9d9bd6282041e514732b8684d5af299108928d728437f8198ba5c
+EBUILD zentest-4.2.1.ebuild 997 RMD160 599ea9af851b706869240f82c5d72ad9548436cc SHA1 6fd8668c8742e2215d096fa46c13533da095366f SHA256 75701d3df87cf4ce4b49600c4546dd1b9223f32d1f2d21371b0b6a51e8094c4a
+MISC ChangeLog 8104 RMD160 80a7fb8b8166b6ca100b2c4c6bc9e2d0fe755761 SHA1 5b02b64a14280d3fc1c3a6bbae351c484c5c7b71 SHA256 ddda86426719f83898bf5be75ed185754077d73faaa86f13784f6bc1f9f90f27
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
