@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/zentest
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.57 2009/09/05 18:58:03 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.58 2009/12/25 18:48:23 flameeyes Exp $
+
+*zentest-4.2.1 (25 Dec 2009)
+
+  25 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  +zentest-4.2.1.ebuild:
+  Version bump and port to ruby-fakegem.
 
   05 Sep 2009; Brent Baude <ranger@gentoo.org> zentest-4.1.3.ebuild:
   Marking zentest-4.1.3 ppc64 for bug 280665
